# SFHash

./: .gitmodules  LICENSE  README.md
SHXX/: CMakeLists.txt  Config.hpp.in  SHXXConfig.cmake.in
SHXX/shxx/: CMakeLists.txt
SHXX/shxx/include/SHXX/: SHash32.hpp
SHXX/shxx/src/SHXX/: SHash32.cpp
